# funny-morse

./: README.md  pyproject.toml
funny_morse/: __init__.py  __main__.py  key.py  morse.py  morseTable.py  parallel.py  play.py  pyboard.py  show.py
